--- a/Sensor-App/Info.plist
+++ b/Sensor-App/Info.plist
@@ -19,15 +19,15 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.1.0</string>
 	<key>CFBundleVersion</key>
-	<string>2</string>
+	<string>1.2019347.1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>GPS Sensor</string>
+	<string>GPS Access required to show current location</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>GPS Sensor</string>
+	<string>GPS Access required to show current location</string>
 	<key>NSMotionUsageDescription</key>
-	<string>Motion Sensor</string>
+	<string>Motion Sensor access required</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
