--- a/Sensor-App.xcodeproj/xcshareddata/xcschemes/Sensor-App-Dev.xcscheme
+++ b/Sensor-App.xcodeproj/xcshareddata/xcschemes/Sensor-App-Dev.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1020"
+   LastUpgradeVersion = "1100"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "157B0E6E227F57D6004CC169"
-               BuildableName = "Sensor-App.app"
-               BlueprintName = "Sensor-App"
+               BlueprintIdentifier = "1513ACB9232529640095760B"
+               BuildableName = "Sensor-App-Dev.app"
+               BlueprintName = "Sensor-App - Dev"
                ReferencedContainer = "container:Sensor-App.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -27,20 +27,11 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "157B0E6E227F57D6004CC169"
-            BuildableName = "Sensor-App.app"
-            BlueprintName = "Sensor-App"
-            ReferencedContainer = "container:Sensor-App.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <Testables>
       </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -53,9 +44,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "157B0E6E227F57D6004CC169"
-            BuildableName = "Sensor-App.app"
-            BlueprintName = "Sensor-App"
+            BlueprintIdentifier = "1513ACB9232529640095760B"
+            BuildableName = "Sensor-App-Dev.app"
+            BlueprintName = "Sensor-App - Dev"
             ReferencedContainer = "container:Sensor-App.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -70,9 +61,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "157B0E6E227F57D6004CC169"
-            BuildableName = "Sensor-App.app"
-            BlueprintName = "Sensor-App"
+            BlueprintIdentifier = "1513ACB9232529640095760B"
+            BuildableName = "Sensor-App-Dev.app"
+            BlueprintName = "Sensor-App - Dev"
             ReferencedContainer = "container:Sensor-App.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
