--- a/Sensor-App.xcodeproj/xcshareddata/xcschemes/Sensor-App-Screenshots.xcscheme
+++ b/Sensor-App.xcodeproj/xcshareddata/xcschemes/Sensor-App-Screenshots.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1100"
+   LastUpgradeVersion = "1020"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -10,13 +10,13 @@
             buildForTesting = "YES"
             buildForRunning = "YES"
             buildForProfiling = "YES"
-            buildForArchiving = "NO"
+            buildForArchiving = "YES"
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "1513ACB9232529640095760B"
-               BuildableName = "Sensor-App-Dev.app"
-               BlueprintName = "Sensor-App - Dev"
+               BlueprintIdentifier = "157B0E6E227F57D6004CC169"
+               BuildableName = "Sensor-App.app"
+               BlueprintName = "Sensor-App"
                ReferencedContainer = "container:Sensor-App.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -27,28 +27,43 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
-      systemAttachmentLifetime = "keepAlways"
-      userAttachmentLifetime = "keepAlways">
+      systemAttachmentLifetime = "keepNever">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "157B0E6E227F57D6004CC169"
+            BuildableName = "Sensor-App.app"
+            BlueprintName = "Sensor-App"
+            ReferencedContainer = "container:Sensor-App.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <Testables>
          <TestableReference
-            skipped = "NO">
+            skipped = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "1511015A23648DEB00EC0292"
-               BuildableName = "Sensor-App-DevTests.xctest"
-               BlueprintName = "Sensor-App-DevTests"
+               BlueprintIdentifier = "1511013E23648D4000EC0292"
+               BuildableName = "Sensor-AppTests.xctest"
+               BlueprintName = "Sensor-AppTests"
                ReferencedContainer = "container:Sensor-App.xcodeproj">
             </BuildableReference>
          </TestableReference>
          <TestableReference
-            skipped = "NO">
+            skipped = "NO"
+            parallelizable = "YES"
+            useTestSelectionWhitelist = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "1511016823648DF700EC0292"
-               BuildableName = "Sensor-App-DevUITests.xctest"
-               BlueprintName = "Sensor-App-DevUITests"
+               BlueprintIdentifier = "1511014C23648D8000EC0292"
+               BuildableName = "Sensor-AppUITests.xctest"
+               BlueprintName = "Sensor-AppUITests"
                ReferencedContainer = "container:Sensor-App.xcodeproj">
             </BuildableReference>
+            <SelectedTests>
+               <Test
+                  Identifier = "ScreenshotUITests/testScreenshot()">
+               </Test>
+            </SelectedTests>
          </TestableReference>
       </Testables>
    </TestAction>
@@ -66,9 +81,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "1513ACB9232529640095760B"
-            BuildableName = "Sensor-App-Dev.app"
-            BlueprintName = "Sensor-App - Dev"
+            BlueprintIdentifier = "157B0E6E227F57D6004CC169"
+            BuildableName = "Sensor-App.app"
+            BlueprintName = "Sensor-App"
             ReferencedContainer = "container:Sensor-App.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -83,9 +98,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "1513ACB9232529640095760B"
-            BuildableName = "Sensor-App-Dev.app"
-            BlueprintName = "Sensor-App - Dev"
+            BlueprintIdentifier = "157B0E6E227F57D6004CC169"
+            BuildableName = "Sensor-App.app"
+            BlueprintName = "Sensor-App"
             ReferencedContainer = "container:Sensor-App.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
