--- a/Sensor-App-WatchApp Extension/Info.plist
+++ b/Sensor-App-WatchApp Extension/Info.plist
@@ -32,6 +32,12 @@
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.watchkit</string>
 	</dict>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>GPS Access required to show current location</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>GPS Access required to show current location</string>
+	<key>NSMotionUsageDescription</key>
+	<string>Motion Sensor access required</string>
 	<key>WKExtensionDelegateClassName</key>
 	<string>$(PRODUCT_MODULE_NAME).ExtensionDelegate</string>
 </dict>
