--- a/Sensor-App.xcodeproj/xcshareddata/xcschemes/Sensor-App.xcscheme
+++ b/Sensor-App.xcodeproj/xcshareddata/xcschemes/Sensor-App.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1130"
-   version = "1.3">
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -28,7 +28,9 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       systemAttachmentLifetime = "keepAlways"
-      userAttachmentLifetime = "keepAlways">
+      userAttachmentLifetime = "keepAlways"
+      codeCoverageEnabled = "YES"
+      localizableStringsDataGatheringEnabled = "YES">
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
@@ -48,16 +50,10 @@
                BlueprintName = "Sensor-AppTests"
                ReferencedContainer = "container:Sensor-App.xcodeproj">
             </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "1511014C23648D8000EC0292"
-               BuildableName = "Sensor-AppUITests.xctest"
-               BlueprintName = "Sensor-AppUITests"
-               ReferencedContainer = "container:Sensor-App.xcodeproj">
-            </BuildableReference>
+            <LocationScenarioReference
+               identifier = "com.apple.dt.IDEFoundation.CurrentLocationScenarioIdentifier"
+               referenceType = "1">
+            </LocationScenarioReference>
          </TestableReference>
       </Testables>
    </TestAction>
