--- a/Sensor-App.xcodeproj/xcshareddata/xcschemes/Sensor-App-Screenshots.xcscheme
+++ b/Sensor-App.xcodeproj/xcshareddata/xcschemes/Sensor-App-Screenshots.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1130"
-   version = "1.3">
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -53,7 +53,6 @@
          </TestableReference>
          <TestableReference
             skipped = "NO"
-            parallelizable = "YES"
             useTestSelectionWhitelist = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
@@ -67,6 +66,10 @@
                   Identifier = "ScreenshotUITests/testScreenshot()">
                </Test>
             </SelectedTests>
+            <LocationScenarioReference
+               identifier = "New York, NY, USA"
+               referenceType = "1">
+            </LocationScenarioReference>
          </TestableReference>
       </Testables>
    </TestAction>
