--- a/Sensor-App.xcodeproj/xcshareddata/xcschemes/Sensor-App-Framework.xcscheme
+++ b/Sensor-App.xcodeproj/xcshareddata/xcschemes/Sensor-App-Framework.xcscheme
@@ -14,23 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "1527B04624C4AA620024DD78"
-               BuildableName = "Sensor-App-WatchApp.app"
-               BlueprintName = "Sensor-App-WatchApp"
-               ReferencedContainer = "container:Sensor-App.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "1527B01624C4AA240024DD78"
-               BuildableName = "Sensor-App.app"
-               BlueprintName = "Sensor-App"
+               BlueprintIdentifier = "1527B07824C4ACA20024DD78"
+               BuildableName = "Sensor_App_Framework.framework"
+               BlueprintName = "Sensor-App-Framework"
                ReferencedContainer = "container:Sensor-App.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -54,16 +40,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "1527B04624C4AA620024DD78"
-            BuildableName = "Sensor-App-WatchApp.app"
-            BlueprintName = "Sensor-App-WatchApp"
-            ReferencedContainer = "container:Sensor-App.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -71,16 +47,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "1527B04624C4AA620024DD78"
-            BuildableName = "Sensor-App-WatchApp.app"
-            BlueprintName = "Sensor-App-WatchApp"
+            BlueprintIdentifier = "1527B07824C4ACA20024DD78"
+            BuildableName = "Sensor_App_Framework.framework"
+            BlueprintName = "Sensor-App-Framework"
             ReferencedContainer = "container:Sensor-App.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
