--- a/Sensor-App/Support/Info.plist
+++ b/Sensor-App/Support/Info.plist
@@ -26,6 +26,8 @@
 	<string>GPS Access required to show current location</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>GPS Access required to show current location</string>
+	<key>Debugging</key>
+	<string>${DEBUGGING}</string>
 	<key>NSMotionUsageDescription</key>
 	<string>Motion Sensor access required</string>
 	<key>UIApplicationSceneManifest</key>
